<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.applications.NewApplicationPosition">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/back"
                app:title="New Application"
                android:background="@color/teal_700"/>


            <EditText
                android:id="@+id/titleField"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>

            <EditText
                android:id="@+id/descriptionField"
                android:hint="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>

            <EditText
                android:id="@+id/responsibilitiesField"
                android:hint="@string/responsibilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>

            <EditText
                android:id="@+id/qualificationsField"
                android:hint="@string/qualifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>

            <EditText
                android:id="@+id/jobFunctionField"
                android:hint="@string/job_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>

            <EditText
                android:id="@+id/employmentType"
                android:hint="@string/employment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>

            <EditText
                android:id="@+id/professionField"
                android:hint="@string/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/applicationButton"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:layout_margin="15dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="Send Application"
                android:textColor="@color/white"
                android:textStyle="bold"/>


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/appPb"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>