<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employees.appAvailabilities.JobApplicationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:navigationIcon="@drawable/back"
            app:titleTextColor="@color/white"
            app:title="Application"
            android:id="@+id/newJobApplicationTb"
            android:background="@color/teal_700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/cover_letter"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/coverLetterField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:hint="@string/cover_letter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/why_to_get_the_position"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/why_get_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:hint="@string/why_to_get_the_position" />

        <Button
            android:id="@+id/applyJobButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bg"
            android:backgroundTint="@color/teal_700"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jobAppPb"
        android:visibility="gone"
        android:layout_gravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>