<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employees.profile.EmployeeProfile">

    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/profileTb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:layout_gravity="center"
                app:navigationIcon="@drawable/back"
                app:title="Profile"
                app:titleTextColor="@color/white"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/name"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/profileNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/profileEmailTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/national_id"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/profileIdTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/kra_pin"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/profileKraTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/nssf"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/profileNssfTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/nhif"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/profileNhifTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/position"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/profilePositionTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/phone_number"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/phoneNumberTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/dobTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="Date Joined"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/dateJoinedTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/to_be_filled"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>