<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.tickets.AdminTickets">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/adminTicketsTb"
            app:navigationIcon="@drawable/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            app:title="Tickets"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/highBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/high"
                android:checked="true"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/midBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/mid"
                android:checked="true"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/lowBox"
                android:checked="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/low"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:textColor="@color/white"
            android:text="High"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textColor="@color/white"
            android:text="Mid"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:textColor="@color/white"
            android:text="Low"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="5dp"
            android:id="@+id/adminTicketsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>